# firepit

./: .gitignore  .lefthookrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  commitlint.config.mjs  dist-workspace.toml  dprint.json  firepit.yml  lefthook.yml  mise.toml  release.sh  renovate.json  renovate.json5  schema.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-workaround  ci.yml  docs.yml  release.yml  schema.yml
docs/: cli.md  configuration.md  getting-started.md  index.md  installation.md  package-lock.json  package.json  schema-body.md  schema.md  tui.md
docs/.vitepress/: config.mts
examples/hello/: firepit.yml
examples/multi/: README.md  bun.lockb  firepit-base.yml  firepit.yml  package.json
examples/multi/client/: bun.lockb  firepit.yml  package.json
examples/multi/server/: bun.lockb  firepit.yml
examples/single/: Dockerfile  README.md  biome.json  bun.lockb  dump.rdb  firepit.yml  mise.toml  package.json
examples/single/src/: index.ts
scripts/: fire  schema-to-md.js
src/: cli.rs  config.rs  cui.rs  error.rs  event.rs  graph.rs  lib.rs  log.rs  main.rs  output.rs  panic.rs  probe.rs  project.rs  runner.rs  signal.rs  template.rs  util.rs  watcher.rs
src/app/: command.rs  event.rs  input.rs  mod.rs  signal.rs
src/app/cui/: color.rs  input.rs  lib.rs  logs.rs  mod.rs  output.rs  prefixed.rs
src/app/tui/: clipboard.rs  dialog.rs  help.txt  hyperlink.rs  input.rs  lib.rs  mod.rs  pane.rs  search.rs  size.rs  table.rs  task.rs  term_output.rs
src/cli/: mod.rs  run.rs
src/cui/: app.rs  color.rs  lib.rs  logs.rs  mod.rs  output.rs  prefixed.rs
src/process/: child.rs  command.rs  mod.rs
src/run/: exec.rs  mod.rs  output.rs
src/runner/: command.rs  graph.rs  mod.rs  watcher.rs
src/signal/: mod.rs
src/tui/: app.rs  clipboard.rs  event.rs  handle.rs  input.rs  lib.rs  mod.rs  pane.rs  search.rs  size.rs  table.rs  task.rs  term_output.rs
src/ui/: lib.rs  logs.rs  mod.rs  output.rs  prefixed.rs  sender.rs
test/basic/: firepit.yml
test/service/: firepit.yml
tests/: config.rs  project.rs  runner.rs
tests/fixtures/config/bad_child/: firepit.yml
tests/fixtures/config/bad_type/: firepit.yml
tests/fixtures/config/defaults_bad_regex/: firepit.yml
tests/fixtures/config/defaults_finalized_by/: firepit.yml
tests/fixtures/config/defaults_list/: firepit.yml
tests/fixtures/config/defaults_multi/: firepit.yml
tests/fixtures/config/defaults_no_selector/: firepit.yml
tests/fixtures/config/defaults_override/: firepit.yml
tests/fixtures/config/defaults_regex/: firepit.yml
tests/fixtures/config/env_files_empty/: firepit.yml
tests/fixtures/config/merge/: a.yml  b.yml  firepit.yml
tests/fixtures/config/multi/: firepit.yml
tests/fixtures/config/render_empty_entries/: firepit.yml
tests/fixtures/project/bad_env_file/: firepit.yml
tests/fixtures/project/multi/: firepit.yml
tests/fixtures/project/no_env_file/: firepit.yml
tests/fixtures/project/task_empty_args_label/: firepit.yml
tests/fixtures/project/variant_label/: firepit.yml
tests/fixtures/runner/01_basic/: firepit.yml
tests/fixtures/runner/02_fail/: firepit.yml
tests/fixtures/runner/03_multi/: firepit.yml
tests/fixtures/runner/11_service/: firepit.yml
tests/fixtures/runner/12_bad_service/: firepit.yml
tests/fixtures/runner/21_watch/: firepit.yml
tests/fixtures/runner/22_watch_service/: firepit.yml
tests/fixtures/runner/31_up_to_date/: firepit.yml
tests/fixtures/runner/bad_service/: firepit.yml
tests/fixtures/runner/basic_empty/: firepit.yml
tests/fixtures/runner/basic_failure/: firepit.yml
tests/fixtures/runner/basic_single/: firepit.yml
tests/fixtures/runner/cyclic/: firepit.yml
tests/fixtures/runner/env/: .env.1  .env.2  .env.4  .env.5  base.yml  firepit.yml
tests/fixtures/runner/finalized_by/: firepit.yml
tests/fixtures/runner/finalized_by_chain/: firepit.yml
tests/fixtures/runner/finalized_by_cyclic/: firepit.yml
tests/fixtures/runner/finalized_by_failure/: firepit.yml
tests/fixtures/runner/finalized_by_invalid/: firepit.yml
tests/fixtures/runner/finalized_by_service/: firepit.yml
tests/fixtures/runner/finalized_by_vars/: firepit.yml
(+38 files in other folders)
