[package]
name = "firepit"
version = "0.12.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/kota65535/firepit"
description = "Simple task & service runner with comfortable TUI"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
atty = "0.2.14"
axoupdater = { version = "0.9.0", features = ["blocking"] }
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.20", features = ["derive"] }
console = "0.16.0"
console-subscriber = "0.4.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derivative = "2.2.0"
dotenvy = "0.15.7"
futures = "0.3.31"
globmatch = "0.3.0"
human-panic = "2.0.2"
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.14.0"
libc = "0.2.162"
nix = { version = "0.26.2", features = ["signal"] }
notify = "8.0.0"
once_cell = "1.19.0"
petgraph = "0.8.0"
portable-pty = "0.9.0"
ratatui = "=0.26.1"
regex = "1.11.1"
schemars = { version = "0.8.21", features = ["indexmap2"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
strum = "0.26.3"
tera = "1.20.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-term = { version = "=0.1.9", default-features = false }
vt100 = { git = "https://github.com/kota65535/vt100-rust", rev = "cc4bd1eb6f1e302eaa5a5f24d5bed02a4244d0c6" }
which = "8.0.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
assertables = "9.5.0"
rstest = "0.26.0"
